--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -14,6 +14,7 @@
                 </div>
                 <div th:if="${#fields.hasErrors('identificador')}" th:errors="*{identificador}"></div>
             </div>
+            
             <div>
                 <label for="nombre">Nombre</label>
                 <div>
@@ -21,6 +22,7 @@
                 </div>
                 <div th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}"></div>
             </div>
+
             <div>
                 <label for="apellido">Apellido</label>
                 <div>
@@ -28,6 +30,7 @@
                 </div>
                 <div th:if="${#fields.hasErrors('apellido')}" th:errors="*{apellido}"></div>
             </div>
+
             <div>
                 <label for="username">Username</label>
                 <div>
@@ -35,6 +38,7 @@
                 </div>
                 <div th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></div>
             </div>
+
             <div>
                 <label for="password">Password</label>
                 <div>
@@ -42,12 +46,39 @@
                 </div>
                 <div th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></div>
             </div>
+
             <div>
                 <label for="email">Email</label>
                 <div>
                     <input type="text" name="email" id="email" th:field="*{email}">
                 </div>
                 <div th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></div>
+            </div>
+
+            <div>
+                <label for="cuenta">Cuenta</label>
+                <div>
+                    <input type="text" name="cuenta" id="cuenta" th:field="*{cuenta}">
+                </div>
+                <div th:if="${#fields.hasErrors('cuenta')}" th:errors="*{cuenta}"></div>
+            </div>
+
+            <div>
+                <label for="fechaNacimiento">Fecha de nacimiento</label>
+                <div>
+                    <input type="date" name="fechaNacimiento" id="fechaNacimiento" th:field="*{fechaNacimiento}">
+                </div>
+                <div th:if="${#fields.hasErrors('fechaNacimiento')}" th:errors="*{fechaNacimiento}"></div>
+            </div>
+
+            <div>
+                <label for="paises">Paises</label>
+                <div>
+                    <select id="paises" th:field="*{pais}">
+                        <option th:each="pais: ${paises}" th:text="${pais}" th:value="${pais}"></option>
+                    </select>
+                </div>
+                <div th:if="${#fields.hasErrors('fechaNacimiento')}" th:errors="*{fechaNacimiento}"></div>
             </div>
             <div>
                 <input type="submit" value="Enviar datos">
