--- a/src/main/resources/templates/resultado.html
+++ b/src/main/resources/templates/resultado.html
@@ -12,6 +12,9 @@
             <li th:text="${usuario.password}"></li>
             <li th:text="${usuario.email}"></li>
             <li th:text="${usuario.identificador}"></li>
+            <li th:text="${usuario.cuenta}"></li>
+            <li th:text="${usuario.fechaNacimiento}"></li>
+            <li th:text="${usuario.pais}"></li>
         </ul>
     </body>
 </html>
