--- a/src/main/resources/templates/resultado.html
+++ b/src/main/resources/templates/resultado.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="es" xmlns:th="http://www.thymeleaf.org">
     <head>
+        <title>Resultado del Formulario</title>
     </head>
 
     <body>
@@ -13,8 +14,9 @@
             <li th:text="${usuario.email}"></li>
             <li th:text="${usuario.identificador}"></li>
             <li th:text="${usuario.cuenta}"></li>
-            <li th:text="${usuario.fechaNacimiento}"></li>
+            <li th:text="${#dates.format(usuario.fechaNacimiento, 'dd/MM/yyyy')}"></li>
             <li th:text="${usuario.pais}"></li>
+
         </ul>
     </body>
 </html>
