--- a/src/main/resources/templates/resultado.html
+++ b/src/main/resources/templates/resultado.html
@@ -9,6 +9,7 @@
         <ul>
             <li th:text="${usuario.nombre}"></li>
             <li th:text="${usuario.apellido}"></li>
+            <li th:text="${usuario.genero}"></li>
             <li th:text="${usuario.username}"></li>
             <li th:text="${usuario.password}"></li>
             <li th:text="${usuario.email}"></li>
@@ -18,7 +19,13 @@
             <li th:text="${usuario.pais.codigo}"></li>
             <li th:text="${usuario.pais.id}"></li>
             <li th:text="${usuario.pais.nombre}"></li>
+            <li th:text="'Habilitado: ' + ${usuario.habilitar}"></li>
+            <li th:text="'Hidden Value: ' + ${usuario.valorSecreto}"></li>
+        </ul>
 
+        <div>Roles</div>
+        <ul>
+            <li th:each="role: ${usuario.roles}" th:text="${role.nombre}"></li>
         </ul>
     </body>
 </html>
