--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -2,91 +2,94 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="es">
     <head>
         <title>asu</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     </head>
 
     <body>
         <h1 th:text="${titulo}"></h1>
+        <div class="container">
         <form action="/form" method="post" th:object="${usuario}">
 
              <div>
                 <label for="habilitar">Habilitar</label>
-                <div>
-                    <input type="checkbox" id="habilitar" th:field="*{habilitar}">
+                <div class="row">
+                    <input type="checkbox" id="habilitar" th:field="*{habilitar}" class="col-sm-1">
                 </div>
             </div>
-            <div>
+            <div class="form-group">
                 <label>Género</label>
-                <div th:each="genero: ${generos}">
+                <div th:each="genero: ${generos}" >
                     <input type="radio" th:field="*{genero}" th:value="${genero}">
                     <label th:for="${#ids.prev('genero')}" th:text="${genero}"></label>
                 </div>
                 <div th:if="${#fields.hasErrors('genero')}" th:errors="*{genero}"></div>
             </div>
-            <div>
+            <div class="form-group">
                 <label for="identificador">identificador</label>
                 <div>
-                    <input type="text" name="identificador" id="identificador" th:field="*{identificador}">
+                    <input type="text" name="identificador" id="identificador" th:field="*{identificador}" class="form-control">
                 </div>
                 <div th:if="${#fields.hasErrors('identificador')}" th:errors="*{identificador}"></div>
             </div>
 
-            <div>
+            <div class="form-group">
                 <label for="nombre">Nombre</label>
                 <div>
-                    <input type="text" name="nombre" id="nombre" th:field="*{nombre}">
+                    <input type="text" name="nombre" id="nombre" th:field="*{nombre}" class="form-control">
                 </div>
                 <div th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}"></div>
             </div>
 
-            <div>
+            <div class="form-group">
                 <label for="apellido">Apellido</label>
                 <div>
-                    <input type="text" name="apellido" id="apellido" th:field="*{apellido}">
+                    <input type="text" name="apellido" id="apellido" th:field="*{apellido}" class="form-control">
                 </div>
                 <div th:if="${#fields.hasErrors('apellido')}" th:errors="*{apellido}"></div>
             </div>
 
-            <div>
+            <div class="form-group">
                 <label for="username">Username</label>
                 <div>
-                    <input type="text" name="username" id="username" th:field="*{username}">
+                    <input type="text" name="username" id="username" th:field="*{username}" class="form-control">
                 </div>
                 <div th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></div>
             </div>
 
-            <div>
+            <div class="form-group">
                 <label for="password">Password</label>
                 <div>
-                    <input type="password" name="password" id="password" th:field="*{password}">
+                    <input type="password" name="password" id="password" th:field="*{password}" class="form-control">
                 </div>
                 <div th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></div>
             </div>
 
-            <div>
+            <div class="form-group">
                 <label for="email">Email</label>
                 <div>
-                    <input type="text" name="email" id="email" th:field="*{email}">
+                    <input type="text" name="email" id="email" th:field="*{email}" class="form-control">
                 </div>
                 <div th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></div>
             </div>
 
-            <div>
+            <div class="form-group">
                 <label for="cuenta">Cuenta</label>
                 <div>
-                    <input type="text" name="cuenta" id="cuenta" th:field="*{cuenta}">
+                    <input type="text" name="cuenta" id="cuenta" th:field="*{cuenta}" class="form-control">
                 </div>
                 <div th:if="${#fields.hasErrors('cuenta')}" th:errors="*{cuenta}"></div>
             </div>
 
-            <div>
+            <div class="form-group">
                 <label for="fechaNacimiento">Fecha de nacimiento</label>
                 <div>
-                    <input type="date" name="fechaNacimiento" id="fechaNacimiento" th:field="*{fechaNacimiento}">
+                    <input type="date" name="fechaNacimiento" id="fechaNacimiento" th:field="*{fechaNacimiento}" class="form-control">
                 </div>
                 <div th:if="${#fields.hasErrors('fechaNacimiento')}" th:errors="*{fechaNacimiento}"></div>
             </div>
 
-            <div>
+            <div class="form-group">
 <!--                <div>-->
 <!--                    <select id="paises" th:field="*{pais}">-->
 <!--                        <option th:each="pais: ${paisesMap}" th:text="${pais.value}" th:value="${pais.key}">-->
@@ -95,7 +98,7 @@
 <!--                </div>-->
                 <label for="pais.codigo">Paises</label>
                 <div>
-                    <select id="pais.codigo" th:field="*{pais}">
+                    <select id="pais.codigo" th:field="*{pais}" class="form-control">
                         <option th:each="pais: ${listaPaises}" th:text="${pais.nombre}" th:value="${pais.id}">
                         </option>
                     </select>
@@ -112,21 +115,22 @@
                 </div>
             </div>
 -->
-            <div>
+            <div class="form-group">
 
                 <label>Roles</label>
                 <div th:each="role: ${listaRoles}">
-                    <input type="checkbox" th:field="*{roles}" th:value="${role.id}">
+                    <input type="checkbox" th:field="*{roles}" th:value="${role.id}" th:checked="${#lists.contains(usuario.roles, role)}">
                     <label th:for="${#ids.prev('roles')}" th:text="${role.nombre}"></label>
                 </div>
             </div>
-            <div>
-                <input type="submit" value="Enviar datos">
+            <div class="form-group">
+                <input type="submit" value="Enviar datos" class="btn btn-primary">
             </div>
 
             <div>
                 <input type="hidden" th:field="*{valorSecreto}"></input>
             </div>
         </form>
+        </div>
     </body>
 </html>
